--- a/css/style.css
+++ b/css/style.css
@@ -373,14 +373,16 @@ footer a{
 
 .error{
     color: rgb(248, 55, 55);
-    padding: 10 0px;
+    padding: 10px 0px;
+}
+
+.valide{
+    color: white ;
+    padding: 10px 0px;
 }
 
 /* CSS PLANNING */
 
-#planning{
-    height: 85vh;
-}
 
 .contenu_planning{
     padding: 20px;
@@ -483,6 +485,7 @@ th{
     object-fit: cover;
     height: 50vh;
 }
+
 
 
 
